Kubernetes/client-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studynest-app
  namespace: dusty-final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studynest-app 
  template:
    metadata:
      labels:
        app: studynest-app
    spec:
      containers:
        - name: studynest-app
          image: codebras/studynest:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
