Kubernetes/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: studynest-api
  namespace: dusty-final
spec:
  selector:
    app: studynest-api # name of deployment 
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
