Kubernetes/client-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: studynest-app
  namespace: dusty-final
spec:
  selector:
    app: studynest-app # name of deployment  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
