Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studynest-ingress
  namespace: dusty-final
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: studynest.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: studynest-app # name of client deployment 
            port:
              number: 80
  - host: api.studynest.duckdns.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: studynest-api # name of server deployment
            port:
              number: 8080
